Fri Oct 30 13:08:30 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3748_Regression/client.cpp:
        * tests/Bug_3748_Regression/Bug_3748_Regression.mpc:
        * tests/Bug_3748_Regression/Server_ORBInitializer.h:
        * tests/Bug_3748_Regression/Hello.cpp:
        * tests/Bug_3748_Regression/Test.idl:
        * tests/Bug_3748_Regression/server.cpp:
        * tests/Bug_3748_Regression/Test_Protocols_Hooks.cpp:
        * tests/Bug_3748_Regression/Makefile.am:
        * tests/Bug_3748_Regression/Hello.h:
        * tests/Bug_3748_Regression/Test_Protocols_Hooks.h:
        * tests/Bug_3748_Regression/README:
        * tests/Bug_3748_Regression/run_test.pl:
        * tests/Bug_3748_Regression/Server_ORBInitializer.cpp:
        * bin/tao_orb_tests.lst:
          Complitely rewrote the test for bug#3748 and changed configs
          in which this test can run.

Fri Oct 30 06:15:53 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        Merged changes from Jeff for port/porttype/mirrorport to head

        Thu Oct 29 12:50:35 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
        * TAO_IDL/be_include/be_visitor_connector.h:
        * TAO_IDL/be_include/be_visitor_connector/connector_dds_exs.h:
        * TAO_IDL/be_include/be_visitor_connector/connector_dds_exh.h:

          New visitors, implementing (so far) part of the code
          generation of connector executors.

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_visitor_component/component_exh.cpp:
        * TAO_IDL/be/be_visitor_component/component_exs.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_visitor_component_scope.cpp:
        * TAO_IDL/be_include/be_codegen.h:
        * TAO_IDL/be_include/be_visitor_component_scope.h:
        * TAO_IDL/be_include/be_global.h: